# py-auto

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: __init__.py  settings.py
pages/: __init__.py  base_page.py  example_page.py  expresstoll_account_page.py  expresstoll_home_page.py  expresstoll_login_page.py
tests/: conftest.py
tests/e2e/: test_example.py  test_expresstoll.py
utils/: __init__.py  helpers.py
